@@ -237,6 +237,7 @@ export(rpfmt)
 export(run)
 export(sampler)
 export(sc)
+export(setwd_here)
 export(smsp)
 export(smspline)
 export(smspline.v)
