@@ -1,3 +1,5 @@
+2021_03_02
+* added setwd_here which does nothing when knitting
 2020_12_13
 * xqplot: coerce x to data.frame, to correct problem with tibbles
 2020_11_20
